k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: madazi-postgres
  namespace: madazi
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: madazi-postgres
