k8s/preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: madazi-preview
  namespace: madazi
spec:
  clusterIP: None
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: madazi-preview
