k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: madazi-redis
  namespace: madazi
  labels:
    app: madazi-redis
spec:
  selector:
    app: madazi-redis
  ports:
  - port: 6379
    targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: madazi-redis
  namespace: madazi
  labels:
    app: madazi-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: madazi-redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: madazi-redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
        args: ["redis-server", "--appendonly", "yes", "--maxmemory", "256mb", "--maxmemory-policy", "allkeys-lru"]
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 384Mi
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: madazi-redis-pvc
